On FreeBSD, the Gnu tar command gtar is used in preference to regular tar when installed. This allows incremental backups to be performed.
When MySQL is on a remote system, the 'show table status' command is used to get an approximate size for each database.
Added the notify-domains.pl command line script, for sending email to some or all virtual server owners.
Added a Module Config option to have only one spamassassin process run at a time.
S3 backups to date-based filenames are now supported, and can be properly purged.
---- Changes since 3.62 ----
Updated the TWiki script installer to version 4.2.3, TikiWiki to 2.1, Xoops to 2.3.0, Squirrelmail to 1.4.16, WebCalendar to 1.2.0, WordPress MU to 2.6.2, Magento to 1.1.6, Gallery to 2.3-rc-2, MediaWiki to 1.13.2, ZenPhoto to 1.2.1, SugarCRM to 5.1.0a, and phpMyAdmin to 2.11.9.2.
Updated the Horde installer to version 3.3, and all related applications to their corresponding latest versions.
Added the --source parameter to list-available-scripts.pl, and include script source in full output.
Ensure that resource limits (CPU, RAM and procesess) are never set for the Apache user, even when it is a member of a domain's group for which limits are set.
Plugins can now define additional inputs to appear on the Create Virtual Server page and accepted by create-domain.pl, for options specific to the plugin's feature.
The master administrator can now grant himself access to scripts disabled for regular users, with a new form on the Script Installers page.
When the user or group for a domain is changed, references to the old user or group in lgorotate.conf are updated to the new values.
Re-try S3 bucket creation three times if at first it fails, to avoid temporary outages or network problems.
When setting up clamd, the provided example init script is copied instead of bring modified, so that it can be safely replaced by RPM upgrades.