@@ -50,3 +50,6 @@
 	- FS#4136
 
  - Use new API for webmin modules and categories, when Webmin 1.430 is out
+
+ - Complete Xoops installer
+
