@@ -1,3 +1,0 @@
-<header>Default database name restriction</header>
-This option determines whether a user with database creation privileges can name the database anything he likes.
-<footer>
