@@ -5,5 +5,9 @@ to select the default database name when creating a sub-server that has a
 database feature enabled. Instead, it will always default to the first part
 of the domain name. <p>
 
+In addition, he will no be able to remove the default database for any existing
+domain, as this would allow him to effectively rename the default database
+after domain creation. <p>
+
 <footer>
 
